--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -39,4 +39,20 @@ h1{
 	border-radius: 5px;
 }
 
+#tabela{
+	margin-top: 30px;
+	border-collapse: collapse; /*Esta linha remove espaco entre as celulas da tabela*/
+}
+/*Estilo para o cabeçalho da tabela*/
+#tabela th{
+	border: 1px solid #ddd;
+	padding: 10px;
+	text-align: left;
+	background-color: #66bbff;
+}
+/* Estilo para o corpo da tabela*/
+#tabela td{
+	border: 1px solid #ddd;
+	padding: 10px;
+}
 
